--- a/app/src/main/res/layout-xxxhdpi/activity_one.xml
+++ b/app/src/main/res/layout-xxxhdpi/activity_one.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="top"
         android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="13dp"
         android:layout_marginEnd="20dp"
         android:layout_width="365dp"
         android:layout_height="200dp"/>
@@ -30,7 +30,7 @@
         android:layout_width="365dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="13dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
         android:text="Open Camera"
@@ -39,12 +39,13 @@
         android:background="@android:color/holo_red_dark"/>
 
     <EditText
+
         android:id="@+id/idname"
         android:layout_width="365dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:layout_marginTop="50dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="13dp"
         android:layout_marginRight="20dp"
         android:hint="Enter Name"/>
 
@@ -52,7 +53,7 @@
         android:id="@+id/idphone"
         android:layout_width="365dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="13dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:layout_gravity="top"
@@ -62,7 +63,7 @@
         android:id="@+id/idrp"
         android:layout_width="365dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="13dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
         android:layout_gravity="top"
@@ -72,7 +73,7 @@
             android:id="@+id/idpurpose"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="13dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:layout_gravity="top"
@@ -87,18 +88,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="13dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
-                android:text="  Do you have any Electronics/Storage Device
-                              \n  (For Eg:Laptop,Pendrives)">
+                android:text="Do you have any Electronics/Storage Device
+                          (For Eg:Laptop,Pendrives)">
             </TextView>
 
             <RadioButton
                 android:id="@+id/rbyes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="13dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="top"
@@ -108,8 +109,8 @@
                 android:id="@+id/rbno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="18dp"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="top"
                 android:text="No"/>
@@ -119,7 +120,7 @@
             android:id="@+id/idelectronic"
             android:layout_width="365dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="13dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:layout_gravity="top"
@@ -134,7 +135,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:layout_marginTop="80dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="13dp"
         android:layout_marginRight="20dp"
         android:text="Submit"
         android:textSize="24sp"
